Fix layout issue in Module Permission tab when editing a module

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -397,9 +397,6 @@ h6 { font-size: 12px; line-height: 14px; }
 }
 
 /* Module Assignment Tab */
-.view-module .tab-content{
-	overflow: visible;
-}
 #assignment.tab-pane{
 	min-height: 500px;
 }
